css/style.css
html, body, #map-canvas {
  height: 100%%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.row {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

.col-1 {
  width: 8.33%;
}

.col-2 {
  width: 16.66%;
}

.col-3 {
  width: 25%;
}

.col-4 {
  width: 33.33%;
}

.col-5 {
  width: 41.66%;
}

.col-6 {
  width: 50%;
}

.col-7 {
  width: 58.33%;
}

.col-8 {
  width: 66.66%;
}

.col-9 {
  width: 75%;
}

.col-10 {
  width: 83.33%;
}

.col-11 {
  width: 91.66%;
}

.col-12 {
  width: 100%;
}

h1 {
  font-family: 'Roboto Condensed', sans-serif;
  margin-bottom: 10px;
}

.floatRight {
  float: right;
}

.infoImage {
  margin-left: 5px;
}

#header {
  height: 15%;
}

#mainDiv {
  height: 85%;
  width:100%;
  display: flex;
}

#map-canvas {
  width: 100%;
}

#markerPanel {
  position: absolute;
  left: 80%;
  width: 20%;
  height: 100%;
  background: red;
  display: none;
}

/* Ajustments for tablet size screens*/
@media screen and (max-width: 1250px) {
  html, body, #map-canvas {
    height: 95.8%;
  }
}

@media screen and (max-width: 500px) {
  html, body, #map-canvas {
    height: 95%;
  }
  .title {
    width: 100%;
    text-align: center;
  }
  .functions {
    width: 100%;
  }
  .searchBar {
    width: 33%;
  }
  .hideButton {
    width: 33%;
  }
  .markerButton {
    width: 33%;
  }
}

